--- a/index.html
+++ b/index.html
@@ -159,5 +159,32 @@
         </div>
       </div>
     </div>
+    <div class="deal-container">
+      <div class="deal-container-content">
+        <div class="deal-container-content-timer">
+          <div class="deal-container-timer">
+            <span class="deal-container-timer-time">02</span>
+            <span class="deal-container-timer-word">Dias</span>
+          </div>
+          <div class="deal-container-timer">
+            <span class="deal-container-timer-time">12</span>
+            <span class="deal-container-timer-word">Horas</span>
+          </div>
+          <div class="deal-container-timer">
+            <span class="deal-container-timer-time">25</span>
+            <span class="deal-container-timer-word">Minutos</span>
+          </div>
+          <div class="deal-container-timer">
+            <span class="deal-container-timer-time">13</span>
+            <span class="deal-container-timer-word">Segundos</span>
+          </div>
+        </div>
+        <h2 class="deal-container-content-title">Promoção de fone gamer</h2>
+        <p class="deal-container-content-subtitle">
+          Toda a linha gamer com 50% de desconto
+        </p>
+        <button class="btn">Comprar agora</button>
+      </div>
+    </div>
   </body>
 </html>
