--- a/index.html
+++ b/index.html
@@ -251,5 +251,23 @@
         </div>
       </div>
     </div>
+    <div class="newsletter-container">
+      <h2>Assine a nossa <span>Newsletter</span></h2>
+      <form action="">
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Digite o seu email"
+        />
+        <input type="submit" class="btn btn-half" value="Assinar" />
+      </form>
+      <div class="social-media">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-pinterest-p"></i>
+      </div>
+    </div>
   </body>
 </html>
