feat: add footer

--- a/index.html
+++ b/index.html
@@ -269,5 +269,65 @@
         <i class="fab fa-pinterest-p"></i>
       </div>
     </div>
+    <footer class="footer">
+      <div class="footer-top">
+        <div class="footer-top-about">
+          <h3>Sobre nós</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum
+            repellat nesciunt eius dolores nulla, atque suscipit rem voluptate
+            dignissimos accusamus sit quo non architecto ducimus culpa, numquam
+            sunt odit aspernatur?
+          </p>
+          <p>
+            <i class="fas fa-location-arrow"></i>
+            <a href="#">Rua Teste, 1234</a>
+          </p>
+          <p><i class="fas fa-phone"></i> <a href="#">(99)99999-9999</a></p>
+          <p>
+            <i class="far fa-envelope"></i> <a href="#">electrum@email.com</a>
+          </p>
+        </div>
+        <div class="footer-top-categories">
+          <h3>Categorias</h3>
+          <ul>
+            <li><a href="#">Promoções</a></li>
+            <li><a href="#">Headsets</a></li>
+            <li><a href="#">Pc Gamer</a></li>
+            <li><a href="#">Câmeras</a></li>
+            <li><a href="#">Mouse e teclado</a></li>
+          </ul>
+        </div>
+        <div class="footer-top-information">
+          <h3>Informações</h3>
+          <ul>
+            <li><a href="#">Sobre nós</a></li>
+            <li><a href="#">Entre em contato</a></li>
+            <li><a href="#">Política de privacidade</a></li>
+            <li><a href="#">Pedidos e devoluções</a></li>
+            <li><a href="#">Termos e condições</a></li>
+          </ul>
+        </div>
+        <div class="footer-top-menu">
+          <h3>Menu</h3>
+          <ul>
+            <li><a href="#">Minha conta</a></li>
+            <li><a href="#">Carrinho</a></li>
+            <li><a href="#">Lista de desejos</a></li>
+            <li><a href="#">Rastrear pedido</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="footer-bottom-payments">
+          <i class="fab fa-cc-mastercard"></i>
+          <i class="fab fa-cc-visa"></i>
+          <i class="fab fa-cc-diners-club"></i>
+          <i class="fab fa-cc-amazon-pay"></i>
+          <i class="fab fa-cc-apple-pay"></i>
+        </div>
+        <p>Copyright &copy; 2024 - Electrum</p>
+      </div>
+    </footer>
   </body>
 </html>
